# onlookAI

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package.json  tsconfig.base.json  turbo.json
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: a1b2c3d4e5f6_add_face_detected_enum_value.py
apps/api/app/: main.py
apps/api/app/agents/: answer_evaluation.py  base.py  prompts.py  question_generation.py
apps/api/app/api/: deps.py  router.py
apps/api/app/api/routes/: admin.py  auth.py  learner.py  reporting.py  websocket.py
apps/api/app/core/: config.py  logging.py  permissions.py  security.py
apps/api/app/db/: base.py  init_db.py  seed.py  session.py
apps/api/app/integrations/ai/: base.py  openai_compatible.py
apps/api/app/integrations/lms/: base.py
apps/api/app/models/: __init__.py  assignment.py  attention_event.py  audit_log.py  course.py  course_video.py  final_quiz_result.py  intervention.py  intervention_answer.py  organization.py  session.py  transcript_chunk.py  user.py  video_asset.py  xapi_event.py
apps/api/app/schemas/: assignment.py  auth.py  common.py  content.py  reporting.py  session.py
apps/api/app/services/: attention_service.py  audit_service.py  auth_service.py  course_service.py  reporting_service.py  session_orchestrator.py  transcription_service.py  video_service.py  xapi_service.py
apps/api/app/utils/: enums.py
apps/api/app/workers/: celery_app.py  tasks.py
apps/api/onlook_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+63 files in other folders)
